# kubernetes-ollama-bot

./: LICENSE  pyproject.toml
ollama_robusta_actions/: ollama.py
